# neuro_practic

./: README.md  dataset.csv  forecast_results.csv  main.py  n1.py  pyproject.toml  Завдання.docx
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
