[project]
name = "neuro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "catboost>=1.2.10",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
[tool.pyright]
venv = ".venv"
venvPath = "."
